# gmail-migrator

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-compose-test.yml  integration-tests.yml  main.yml  pre-commit.yml  unit-tests.yml  verify-commit-signature.yml
app/: __init__.py  app.py  dependencies.py  main.py
app/api/: __init__.py
app/api/routers/: __init__.py  gmail.py  migration.py  outlook.py
app/config/: __init__.py  settings.py
app/services/gmail/: __init__.py  auth.py  client.py  labels.py
app/services/migration/: __init__.py  gmail_to_outlook.py
app/services/outlook/: __init__.py  auth.py  client.py
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: index.html
app/utils/: __init__.py  email_parser.py  exceptions.py  rate_limiter.py
scripts/: run.py
tests/: README.md  __init__.py  conftest.py  test_api_routes.py  test_dependencies.py  test_email_parser.py  test_gmail_auth.py  test_gmail_client.py  test_main.py  test_migration_service.py  test_rate_limiter.py
tests/api/routers/: test_outlook.py
tests/integration/: test_outlook_integration.py
tests/services/outlook/: test_auth.py  test_client.py
