[tool.poetry]
name = "gmail-migrator"
version = "0.1.0"
description = "A tool to help users migrate emails from Gmail to other email service providers"
authors = ["henrick <self@thehenrick.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/gmail-migrator"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.88.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
flask = "^3.1.0"
flask-cors = "^5.0.1"
jinja2 = "^3.1.2"
itsdangerous = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
